syntax = "proto3";

option go_package = "common/proto/logging_service";

package logging_service;

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

service LoggingService{

  rpc LoggInfo(LogRequest) returns(LogResult){}

  rpc LoggError(LogRequest) returns(LogResult){}

  rpc LoggWarning(LogRequest) returns(LogResult){}

  rpc LoggSuccess(LogRequest) returns(LogResult){}

  rpc InsertEvent(EventRequest) returns(Empty) {}

  rpc GetEvents(Empty) returns(GetEventsResponse) {}

}

message LogRequest{
  string serviceName = 1;
  string serviceFunctionName = 2;
  string userID = 3;
  string ipAddress = 4;
  string description = 5;
}

message LogResult{
  int64 status = 1;
  string msg = 2;
}

message Empty{
}

message EventRequest{
  string userId = 1;
  string title = 2;
  string description = 3;
  google.protobuf.Timestamp date = 4;
}

message GetEventsResponse{
  repeated EventRequest events = 1;
}

